tests/baselines/reference/enumAssignability.errors.txt
==== tests/cases/compiler/enumAssignability.ts (24 errors) ====
    // enums assignable to number, any, Object, errors unless otherwise noted
    
    enum E { A }
    enum F { B }
    
    var e = E.A;
    var f = F.B;
    
    e = f; 
    ~
!!! error TS2011: Cannot convert 'F' to 'E'.
    f = e; 
    ~
!!! error TS2011: Cannot convert 'E' to 'F'.
    e = 1; // ok
    f = 1; // ok
    var x: number = e; // ok
    x = f; // ok
    
    module Others {
        var a: any = e; // ok
    
        class C {
            foo: string;
        }
        var ac: C;
        interface I {
            foo: string;
        }
        var ai: I;
    
        var b: number = e; // ok
        var c: string = e;
            ~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'E' to 'string'.
        var d: boolean = e;
            ~~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'E' to 'boolean'.
        var ee: Date = e;
            ~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'E' to 'Date'.
        var f: any = e; // ok
        var g: void = e;
            ~~~~~~~~~~~
!!! error TS2011: Cannot convert 'E' to 'void'.
        var h: Object = e;
            ~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'E' to 'Object'.
        var i: {} = e;
            ~~~~~~~~~
!!! error TS2011: Cannot convert 'E' to '{}'.
        var j: () => {} = e;
            ~~~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'E' to '() => {}'.
        var k: Function = e;
            ~~~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'E' to 'Function'.
        var l: (x: number) => string = e;
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'E' to '(x: number) => string'.
        ac = e;
        ~~
!!! error TS2011: Cannot convert 'E' to 'C'.
        ai = e;
        ~~
!!! error TS2011: Cannot convert 'E' to 'I'.
        var m: number[] = e;
            ~~~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'E' to 'number[]'.
        var n: { foo: string } = e;
            ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'E' to '{ foo: string; }'.
        var o: <T>(x: T) => T = e;
            ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'E' to '<T>(x: T) => T'.
        var p: Number = e;
            ~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'E' to 'Number'.
        var q: String = e;
            ~~~~~~~~~~~~~
!!! error TS2011: Cannot convert 'E' to 'String'.
    
        function foo<T, U extends T, V extends Date, A extends Number, B extends E>(x: T, y: U, z: V) {
                        ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
            x = e;
            ~
!!! error TS2011: Cannot convert 'E' to 'T'.
            y = e;
            ~
!!! error TS2011: Cannot convert 'E' to 'U'.
            z = e;
            ~
!!! error TS2011: Cannot convert 'E' to 'V'.
            var a: A = e;
                ~~~~~~~~
!!! error TS2011: Cannot convert 'E' to 'A'.
            var b: B = e;
                ~~~~~~~~
!!! error TS2011: Cannot convert 'E' to 'B'.
        }
    }